--- a/v4/scss/modules/_archive.scss
+++ b/v4/scss/modules/_archive.scss
@@ -1,5 +1,5 @@
 /* ======================================
-//  Error styles
+//  Archive styles
 // ====================================*/
 
 .archive {
@@ -29,6 +29,7 @@
     h4 {
       padding: 0 10px;
       text-decoration: underline;
+      width: 100%;
     }
     h5 {
       color: #A09C9B;
